[New features]：新增书签页面，书签数据装载还没解决

--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewApp">
-        <activity android:name=".ui.activity.RecordActivity"></activity>
-        <activity android:name=".ui.activity.MainActivity">
+        <!--        <activity android:name=".ui.activity.RecordActivity" />-->
+        <activity android:name=".ui.activity.MainActivity" />
+        <activity android:name=".ui.activity.RecordActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
