--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewApp">
-        <!--        <activity android:name=".ui.activity.RecordActivity" />-->
-        <activity android:name=".ui.activity.MainActivity" />
-        <activity android:name=".ui.activity.RecordActivity">
+        <activity android:name=".ui.activity.RecordActivity" />
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
