--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.webviewapp">
 
-    <uses-permission android:name="android.permission.VIBRATE" /> <!-- 请求网络 -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewApp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.EditRecordActivity"></activity>
+        <activity android:name=".ui.activity.PictureViewActivity" />
+        <activity android:name=".ui.activity.EditRecordActivity" />
         <activity android:name=".ui.activity.RecordActivity" />
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
