--- a/WebViewApp/app/build.gradle
+++ b/WebViewApp/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     implementation 'com.bm.photoview:library:1.4.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 }
