--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewApp"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.activity.VideoViewActivity"></activity>
+        <activity android:name=".ui.activity.InfoReadActivity"></activity>
+        <activity android:name=".ui.activity.VideoViewActivity" />
         <activity android:name=".ui.activity.PictureViewActivity" />
         <activity android:name=".ui.activity.SignupActivity" />
-
         <activity
             android:name=".ui.activity.UserActivity"
             android:label="@string/title_activity_user"
