[update]：重构坏味代码

--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".ui.activity.InfoReadActivity"></activity>
         <activity android:name=".ui.activity.VideoViewActivity" />
         <activity android:name=".ui.activity.PictureViewActivity" />
-        <activity android:name=".ui.activity.SignupActivity" />
+        <activity android:name=".ui.activity.SignUpActivity" />
         <activity
             android:name=".ui.activity.UserActivity"
             android:label="@string/title_activity_user"
