[update]：增加腾讯云对象存储示例

--- a/WebViewApp/app/build.gradle
+++ b/WebViewApp/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation ('com.qcloud.cos:cos-android:5.6.12'){
+        exclude group: 'com.tencent.qcloud', module: 'beacon-android-release'
+    }
 }
