[update]：增加eventbus工具类。资讯阅读大概率会发生crash，notifyDataSetChanged的时机不对

--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name=".ui.activity.RecordActivity" />
         <activity
             android:name=".ui.activity.MainActivity"
-            android:hardwareAccelerated="true">
+            android:hardwareAccelerated="true"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
