--- a/WebViewApp/app/src/main/AndroidManifest.xml
+++ b/WebViewApp/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <application
         android:name=".common.base.BaseApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/avatar_1_raster"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
